--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,17 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+
+
+.loader {
+    border: 1px solid rgba(0, 0, 0, 0.119); /* Light grey */
+    border-top: 1px solid white; /* Blue */
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
